--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "nativescript-angular": "~8.2.0",
+    "nativescript-pager": "^11.0.11",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-ui-listview": "^7.1.0",
     "reflect-metadata": "~0.1.12",
